--- a/ShopingList/Base.lproj/Main.storyboard
+++ b/ShopingList/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -49,5 +50,48 @@
             </objects>
             <point key="canvasLocation" x="33.75" y="-9.5070422535211261"/>
         </scene>
+        <!--Cart View Controller-->
+        <scene sceneID="DUF-cq-Ix2">
+            <objects>
+                <viewController storyboardIdentifier="CartControllerID" id="b8k-fa-mY3" customClass="CartViewController" customModule="ShopingList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cnx-06-9jk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DRh-TI-L3d">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HRq-Ss-EhA">
+                                    <size key="itemSize" width="317" height="197"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="7Lt-92-Rnm"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Ce2-UA-3VN"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lMb-8m-gwo"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DRh-TI-L3d" firstAttribute="top" secondItem="lMb-8m-gwo" secondAttribute="top" id="88E-lc-4mD"/>
+                            <constraint firstAttribute="bottom" secondItem="DRh-TI-L3d" secondAttribute="bottom" id="Uyg-Ar-Zzc"/>
+                            <constraint firstItem="DRh-TI-L3d" firstAttribute="leading" secondItem="lMb-8m-gwo" secondAttribute="leading" id="W1q-GG-9mm"/>
+                            <constraint firstAttribute="trailing" secondItem="DRh-TI-L3d" secondAttribute="trailing" id="ioU-0Y-jl0"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Q8-6c-luJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="818" y="-10"/>
+        </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
