Added logic for fetch and show cart items.

--- a/ShopingList/Base.lproj/Main.storyboard
+++ b/ShopingList/Base.lproj/Main.storyboard
@@ -68,6 +68,10 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="b8k-fa-mY3" id="HR4-6s-399"/>
+                                    <outlet property="delegate" destination="b8k-fa-mY3" id="o0J-w4-Lwg"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lMb-8m-gwo"/>
