--- a/ShopingList/Module/ProductList/View/Cell/ProductCollectionViewCell.xib
+++ b/ShopingList/Module/ProductList/View/Cell/ProductCollectionViewCell.xib
@@ -64,6 +64,17 @@
                                     <action selector="addToCartButtonTapped:" destination="10A-BN-J8Z" eventType="touchUpInside" id="9zu-EZ-IAL"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gWq-6F-O2R">
+                                <rect key="frame" x="288" y="10" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="8X8-g8-nuU"/>
+                                    <constraint firstAttribute="height" constant="35" id="mfy-i4-tbA"/>
+                                </constraints>
+                                <state key="normal" image="ic_delete"/>
+                                <connections>
+                                    <action selector="deleteButtonTapped:" destination="10A-BN-J8Z" eventType="touchUpInside" id="3e8-mq-dsW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -72,6 +83,7 @@
                             <constraint firstAttribute="trailing" secondItem="fWc-uh-3KB" secondAttribute="trailing" constant="10" id="JJt-5i-76B"/>
                             <constraint firstAttribute="bottom" secondItem="7KJ-Sx-cja" secondAttribute="bottom" constant="10" id="K0r-MD-08O"/>
                             <constraint firstItem="7KJ-Sx-cja" firstAttribute="trailing" secondItem="qa5-33-Gdh" secondAttribute="trailing" id="Mag-gq-Cfm"/>
+                            <constraint firstAttribute="trailing" secondItem="gWq-6F-O2R" secondAttribute="trailing" constant="10" id="Vb5-yY-rmT"/>
                             <constraint firstAttribute="trailing" secondItem="WCW-hy-RRc" secondAttribute="trailing" constant="20" id="XeT-vG-M1H"/>
                             <constraint firstItem="qa5-33-Gdh" firstAttribute="top" secondItem="WCW-hy-RRc" secondAttribute="bottom" constant="5" id="eS3-Xp-T6P"/>
                             <constraint firstItem="7KJ-Sx-cja" firstAttribute="top" secondItem="qa5-33-Gdh" secondAttribute="bottom" constant="5" id="f6s-cc-hkL"/>
@@ -80,6 +92,7 @@
                             <constraint firstItem="7KJ-Sx-cja" firstAttribute="leading" secondItem="qa5-33-Gdh" secondAttribute="leading" id="g9b-ft-kCH"/>
                             <constraint firstItem="fWc-uh-3KB" firstAttribute="top" secondItem="o5Y-an-EPQ" secondAttribute="top" constant="10" id="jR8-gF-ZwZ"/>
                             <constraint firstItem="qa5-33-Gdh" firstAttribute="trailing" secondItem="WCW-hy-RRc" secondAttribute="trailing" id="kZy-2f-yKx"/>
+                            <constraint firstItem="gWq-6F-O2R" firstAttribute="top" secondItem="o5Y-an-EPQ" secondAttribute="top" constant="10" id="od3-7u-svZ"/>
                             <constraint firstItem="qa5-33-Gdh" firstAttribute="leading" secondItem="WCW-hy-RRc" secondAttribute="leading" id="zl5-K3-Pe2"/>
                         </constraints>
                     </view>
@@ -96,6 +109,7 @@
             <size key="customSize" width="353" height="261"/>
             <connections>
                 <outlet property="cartButton" destination="fWc-uh-3KB" id="ZR6-ai-HPP"/>
+                <outlet property="deleteButton" destination="gWq-6F-O2R" id="E2b-vU-TIH"/>
                 <outlet property="nameLabel" destination="WCW-hy-RRc" id="zHO-LM-vcH"/>
                 <outlet property="parentView" destination="o5Y-an-EPQ" id="76M-Rp-rFc"/>
                 <outlet property="priceLabel" destination="7KJ-Sx-cja" id="Vie-vE-slC"/>
@@ -107,6 +121,7 @@
     </objects>
     <resources>
         <image name="ic_add_cart" width="64" height="64"/>
+        <image name="ic_delete" width="64" height="64"/>
         <image name="ic_profile" width="128" height="128"/>
     </resources>
 </document>
